--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,12 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.9"
+PyYAML = "^6.0"
+playwright = "^1.21.0"
+httpx = "^0.22.0"
 
 [tool.poetry.dev-dependencies]
+pytest-asyncio = "^0.18.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
