--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ packages = [
     { include = "autospider" },
 ]
 
+[tool.poetry.scripts]
+autospider = 'autospider.__main__:cmd'
+
 [tool.poetry.dependencies]
 python = "^3.9"
 PyYAML = "^6.0"
